--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <span>мышь в подарок</span>
             </p>
             <div class="f-item__img">
-              <img src="../img/cat.png" alt="cat">
+              <img src="img/cat.png" alt="cat">
             </div>
             <p class="f-item__value value">
               <span class="value__top">0,5</span>
@@ -55,7 +55,7 @@
               <span><b class="f-item__deal--number">2</b> мыши в подарок</span>
             </p>
             <div class="f-item__img">
-              <img src="../img/cat.png" alt="cat">
+              <img src="img/cat.png" alt="cat">
             </div>
             <p class="f-item__value value">
               <span class="value__top">2</span>
@@ -83,7 +83,7 @@
               <span>заказчик доволен</span>
             </p>
             <div class="f-item__img">
-              <img src="../img/cat.png" alt="cat">
+              <img src="img/cat.png" alt="cat">
             </div>
             <p class="f-item__value value">
               <span class="value__top">5</span>
